--- a/Act2.ipynb
+++ b/Act2.ipynb
@@ -6235,7 +6235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "5225b1ab",
    "metadata": {},
    "outputs": [
@@ -6250,7 +6250,7 @@
     }
    ],
    "source": [
-    "# Modelo 2\n",
+    "# Modelo de IA\n",
     "from scipy.optimize import curve_fit\n",
     "from sklearn.metrics import r2_score\n",
     "import numpy as np\n",
