--- a/Act2.ipynb
+++ b/Act2.ipynb
@@ -6141,7 +6141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "92436411",
    "metadata": {},
    "outputs": [
@@ -6171,33 +6171,33 @@
     "# Modelo 1\n",
     "# y = Host_response_rate \n",
     "# x = reviews_per_month (0.28)\n",
-    "x_h_r_r_m1 = Berlin_cuant['reviews_per_month']\n",
-    "y_h_r_r_m1 = Berlin_cuant['host_response_rate']\n",
+    "x1 = Berlin_cuant['reviews_per_month']\n",
+    "y1= Berlin_cuant['host_response_rate']\n",
     "\n",
     "# Función\n",
     "def func_cuad (x, a, b, c):\n",
     "    return a*x**2 + b*x + c \n",
     "\n",
     "# Parámetros\n",
-    "P_h_r_r, covs_P_h_r_r = curve_fit(func_cuad, x_h_r_r_m1,y_h_r_r_m1 )\n",
-    "print(P_h_r_r)\n",
+    "Par1, covs1= curve_fit(func_cuad, x1,y1 )\n",
+    "print(Par1)\n",
     "\n",
     "# Predicciones\n",
-    "y_pred_P_h_r_r = func_cuad(x_h_r_r_m1, *P_h_r_r)\n",
-    "print(y_pred_P_h_r_r)\n",
+    "y_pred1 = func_cuad(x1, *Par1)\n",
+    "print(y_pred1)\n",
     "\n",
     "# Coeficiente de determinación R^2\n",
-    "R2_det_P = r2_score(y, y_pred_P_h_r_r)\n",
-    "print(R2_det_P)\n",
+    "r2_m1 = r2_score(y1, y_pred1)\n",
+    "print(r2_m1)\n",
     "\n",
     "# Coeficiente de correlación\n",
-    "coef_corr_P = np.sqrt(abs(R2_det_P))\n",
-    "print(coef_corr_P)\n"
+    "r_m1 = np.sqrt(abs(r2_m1))\n",
+    "print(r_m1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 70,
    "id": "d93c0b62",
    "metadata": {},
    "outputs": [
@@ -6205,10 +6205,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c5/_p39j2b97hb2d064t5tdpypm0000gn/T/ipykernel_19568/1742814296.py:2: UserWarning: color is redundantly defined by the 'color' keyword argument and the fmt string \"bo\" (-> color='b'). The keyword argument will take precedence.\n",
+      "/var/folders/c5/_p39j2b97hb2d064t5tdpypm0000gn/T/ipykernel_19568/3856553503.py:2: UserWarning: color is redundantly defined by the 'color' keyword argument and the fmt string \"bo\" (-> color='b'). The keyword argument will take precedence.\n",
       "  plt.plot(x, y, 'bo', label=\"y-original\" , color= \"blue\")\n",
-      "/var/folders/c5/_p39j2b97hb2d064t5tdpypm0000gn/T/ipykernel_19568/1742814296.py:3: UserWarning: color is redundantly defined by the 'color' keyword argument and the fmt string \"bo\" (-> color='b'). The keyword argument will take precedence.\n",
-      "  plt.plot(x, y_pred_P_h_r_r, 'bo', label=\"y-predecida con y = (a*x**2 + b)/ c*x**2\", color= \"red\")\n"
+      "/var/folders/c5/_p39j2b97hb2d064t5tdpypm0000gn/T/ipykernel_19568/3856553503.py:3: UserWarning: color is redundantly defined by the 'color' keyword argument and the fmt string \"bo\" (-> color='b'). The keyword argument will take precedence.\n",
+      "  plt.plot(x, y_pred1, 'bo', label=\"y-predecida con y = (a*x**2 + b)/ c*x**2\", color= \"red\")\n"
      ]
     },
     {
@@ -6225,12 +6225,73 @@
    "source": [
     "#Graficamos las predicciones y los datos originales para realizar la comparación\n",
     "plt.plot(x, y, 'bo', label=\"y-original\" , color= \"blue\")\n",
-    "plt.plot(x, y_pred_P_h_r_r, 'bo', label=\"y-predecida con y = (a*x**2 + b)/ c*x**2\", color= \"red\")\n",
+    "plt.plot(x, y_pred1, 'bo', label=\"y-predecida con y = (a*x**2 + b)/ c*x**2\", color= \"red\")\n",
     "plt.xlabel('x')\n",
     "plt.ylabel('y')\n",
     "plt.legend(loc='best', fancybox=True, shadow=True)\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "4d745099",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parámetros:  [ 1.91403877 95.65329381]\n",
+      "0        95.128011\n",
+      "1        90.268317\n",
+      "2        91.890078\n",
+      "3        93.074943\n",
+      "4        96.552899\n",
+      "           ...    \n",
+      "14085    98.306715\n",
+      "14097    95.653294\n",
+      "14105    96.980004\n",
+      "14115    95.653294\n",
+      "14116    97.756080\n",
+      "Name: reviews_per_month, Length: 10838, dtype: float64\n",
+      "0.10136272942703473\n",
+      "0.31837513946135104\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modelo 2\n",
+    "# y = Host_response_rate \n",
+    "# x = reviews_per_month (0.28)\n",
+    "x2 = Berlin_cuant['reviews_per_month']\n",
+    "y2 = Berlin_cuant['host_response_rate']\n",
+    "\n",
+    "# Función \n",
+    "def func_log  (x, a, b):\n",
+    "    return a*np.log(x) + b\n",
+    "\n",
+    "# Máscara, evitar 0 para Log y definir puntos iniciales\n",
+    "mask = (x2 > 0) & np.isfinite(x2) & np.isfinite(y2)\n",
+    "x2_f, y2_f = x2[mask], y2[mask]\n",
+    "\n",
+    "\n",
+    "# Parámetros\n",
+    "Par2, covs_Par2 = curve_fit(func_log, x2_f, y2_f)\n",
+    "print('Parámetros: ',Par2)\n",
+    "\n",
+    "# Predicciones\n",
+    "y_pred2 = func_log(x2_f, *Par2)\n",
+    "print(y_pred2)\n",
+    "\n",
+    "# Coeficiente de determinación R^2\n",
+    "r2_m2 = r2_score(y2_f, y_pred2)\n",
+    "print(r2_m2)\n",
+    "\n",
+    "# Coeficiente de correlación\n",
+    "r_m2  = np.sqrt(abs(r2_m2))\n",
+    "print(r_m2)"
    ]
   },
   {
@@ -6250,7 +6311,7 @@
     }
    ],
    "source": [
-    "# Modelo de IA\n",
+    "# Modelo de IAa\n",
     "from scipy.optimize import curve_fit\n",
     "from sklearn.metrics import r2_score\n",
     "import numpy as np\n",
@@ -6286,52 +6347,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "71fadce7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# y = host_acceptance_rate\n"
+    "# Modelo 3\n",
+    "#  y = host_acceptance_rate\n",
+    "x3 = Berlin_cuant['AQUI_TU_X']\n",
+    "y3 = Berlin_cuant['host_acceptance_rate']\n",
+    "\n",
+    "# Función (ejemplo cuadrática, cámbiala según necesites)\n",
+    "def func_m3(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par3, covs3 = curve_fit(func_m3, x3, y3)\n",
+    "print(Par3)\n",
+    "\n",
+    "y_pred3 = func_m3(x3, *Par3)\n",
+    "print(y_pred3)\n",
+    "\n",
+    "r2_m3 = r2_score(y3, y_pred3)\n",
+    "print(r2_m3)\n",
+    "\n",
+    "r_m3 = np.sqrt(abs(r2_m3))\n",
+    "print(r_m3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "id": "b34cc33e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modelo 4\n",
+    "#  y = host_acceptance_rate\n",
+    "x4 = Berlin_cuant['AQUI_TU_X']\n",
+    "y4 = Berlin_cuant['host_acceptance_rate']\n",
+    "\n",
+    "def func_m4(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par4, covs4 = curve_fit(func_m4, x4, y4)\n",
+    "print(Par4)\n",
+    "\n",
+    "y_pred4 = func_m4(x4, *Par4)\n",
+    "print(y_pred4)\n",
+    "\n",
+    "r2_m4 = r2_score(y4, y_pred4)\n",
+    "print(r2_m4)\n",
+    "\n",
+    "r_m4 = np.sqrt(abs(r2_m4))\n",
+    "print(r_m4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3adb1312",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# y = host_total_listings_count"
+    "# Modelo 5\n",
+    "# y = host_total_listings_count\n",
+    "\n",
+    "x5 = Berlin_cuant['AQUI_TU_X']\n",
+    "y5 = Berlin_cuant['host_total_listings_count']\n",
+    "\n",
+    "def func_m5(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par5, covs5 = curve_fit(func_m5, x5, y5)\n",
+    "print(Par5)\n",
+    "\n",
+    "y_pred5 = func_m5(x5, *Par5)\n",
+    "print(y_pred5)\n",
+    "\n",
+    "r2_m5 = r2_score(y5, y_pred5)\n",
+    "print(r2_m5)\n",
+    "\n",
+    "r_m5 = np.sqrt(abs(r2_m5))\n",
+    "print(r_m5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
+   "id": "37f09460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modelo 6\n",
+    "# y = host_total_listings_count\n",
+    "\n",
+    "x6 = Berlin_cuant['AQUI_TU_X']\n",
+    "y6 = Berlin_cuant['host_total_listings_count']\n",
+    "\n",
+    "def func_m6(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par6, covs6 = curve_fit(func_m6, x6, y6)\n",
+    "print(Par6)\n",
+    "\n",
+    "y_pred6 = func_m6(x6, *Par6)\n",
+    "print(y_pred6)\n",
+    "\n",
+    "r2_m6 = r2_score(y6, y_pred6)\n",
+    "print(r2_m6)\n",
+    "\n",
+    "r_m6 = np.sqrt(abs(r2_m6))\n",
+    "print(r_m6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "64131e07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# y = accommodates"
+    "# Modelo 7\n",
+    "# y = accommodates\n",
+    "\n",
+    "x7 = Berlin_cuant['AQUI_TU_X']\n",
+    "y7 = Berlin_cuant['accommodates']\n",
+    "\n",
+    "def func_m7(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par7, covs7 = curve_fit(func_m7, x7, y7)\n",
+    "print(Par7)\n",
+    "\n",
+    "y_pred7 = func_m7(x7, *Par7)\n",
+    "print(y_pred7)\n",
+    "\n",
+    "r2_m7 = r2_score(y7, y_pred7)\n",
+    "print(r2_m7)\n",
+    "\n",
+    "r_m7 = np.sqrt(abs(r2_m7))\n",
+    "print(r_m7)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
+   "id": "323d59c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modelo 8\n",
+    "# y = accommodates\n",
+    "\n",
+    "x8 = Berlin_cuant['AQUI_TU_X']\n",
+    "y8 = Berlin_cuant['accommodates']\n",
+    "\n",
+    "def func_m8(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par8, covs8 = curve_fit(func_m8, x8, y8)\n",
+    "print(Par8)\n",
+    "\n",
+    "y_pred8 = func_m8(x8, *Par8)\n",
+    "print(y_pred8)\n",
+    "\n",
+    "r2_m8 = r2_score(y8, y_pred8)\n",
+    "print(r2_m8)\n",
+    "\n",
+    "r_m8 = np.sqrt(abs(r2_m8))\n",
+    "print(r_m8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fca34da5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# y = reviews_per_month"
+    "# Modelo 9\n",
+    "# y = reviews_per_month\n",
+    "\n",
+    "x9 = Berlin_cuant['AQUI_TU_X']\n",
+    "y9 = Berlin_cuant['reviews_per_month']\n",
+    "\n",
+    "def func_m9(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par9, covs9 = curve_fit(func_m9, x9, y9)\n",
+    "print(Par9)\n",
+    "\n",
+    "y_pred9 = func_m9(x9, *Par9)\n",
+    "print(y_pred9)\n",
+    "\n",
+    "r2_m9 = r2_score(y9, y_pred9)\n",
+    "print(r2_m9)\n",
+    "\n",
+    "r_m9 = np.sqrt(abs(r2_m9))\n",
+    "print(r_m9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
+   "id": "0f88eced",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modelo 10\n",
+    "# y = reviews_per_month\n",
+    "\n",
+    "x10 = Berlin_cuant['AQUI_TU_X']\n",
+    "y10 = Berlin_cuant['reviews_per_month']\n",
+    "\n",
+    "def func_m10(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par10, covs10 = curve_fit(func_m10, x10, y10)\n",
+    "print(Par10)\n",
+    "\n",
+    "y_pred10 = func_m10(x10, *Par10)\n",
+    "print(y_pred10)\n",
+    "\n",
+    "r2_m10 = r2_score(y10, y_pred10)\n",
+    "print(r2_m10)\n",
+    "\n",
+    "r_m10 = np.sqrt(abs(r2_m10))\n",
+    "print(r_m10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "eda4626d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# y = price"
+    "# Modelo 11\n",
+    "# y = price\n",
+    "\n",
+    "x11 = Berlin_cuant['AQUI_TU_X']\n",
+    "y11 = Berlin_cuant['price']\n",
+    "\n",
+    "def func_m11(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par11, covs11 = curve_fit(func_m11, x11, y11)\n",
+    "print(Par11)\n",
+    "\n",
+    "y_pred11 = func_m11(x11, *Par11)\n",
+    "print(y_pred11)\n",
+    "\n",
+    "r2_m11 = r2_score(y11, y_pred11)\n",
+    "print(r2_m11)\n",
+    "\n",
+    "r_m11 = np.sqrt(abs(r2_m11))\n",
+    "print(r_m11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c1d3f79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modelo 12\n",
+    "# y = price\n",
+    "\n",
+    "x12 = Berlin_cuant['AQUI_TU_X']\n",
+    "y12 = Berlin_cuant['price']\n",
+    "\n",
+    "def func_m12(x, a, b, c):\n",
+    "    return a*x**2 + b*x + c\n",
+    "\n",
+    "Par12, covs12 = curve_fit(func_m12, x12, y12)\n",
+    "print(Par12)\n",
+    "\n",
+    "y_pred12 = func_m12(x12, *Par12)\n",
+    "print(y_pred12)\n",
+    "\n",
+    "r2_m12 = r2_score(y12, y_pred12)\n",
+    "print(r2_m12)\n",
+    "\n",
+    "r_m12 = np.sqrt(abs(r2_m12))\n",
+    "print(r_m12)"
    ]
   }
  ],
